# teechat-inference-engine-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
config/: tcb-pins.json
crates/ie-attestation/: Cargo.toml
crates/ie-attestation/src/: bundle.rs  claims.rs  error.rs  fixture.rs  lib.rs  measurements.rs  mock_quote.rs  platform.rs  policy.rs  refresh.rs  tcb_pins.rs  verify.rs
crates/ie-attestation/src/nv_cc/: collect.rs  mock.rs  mod.rs  policy.rs  verify.rs
crates/ie-attestation/src/sev_snp/: build_attestation.rs  guest_report.rs  mod.rs  quote.rs  verify_report.rs
crates/ie-bin/: Cargo.toml
crates/ie-bin/src/: main.rs
crates/ie-crypto/: Cargo.toml
crates/ie-crypto/src/: envelope.rs  error.rs  lib.rs  provider.rs
crates/ie-engine/: Cargo.toml
crates/ie-engine/src/: config.rs  cutover.rs  desired_pool.rs  error.rs  gateway_migration.rs  lib.rs  pool.rs  pull_workers.rs  traits.rs
crates/ie-engine/src/controls/: drain.rs  migrate.rs  mod.rs  paths.rs  scale.rs  status.rs
crates/ie-engine/src/epoch/: engine_epoch.rs  mod.rs  policy.rs  rotating_decryptor.rs  rotator.rs
crates/ie-engine/src/infer/: gate.rs  gateway_plane_task.rs  mod.rs  ope_inference.rs
crates/ie-engine/src/ops/: ephemeral.rs  event_log.rs  instance_id.rs  metering.rs  mod.rs  prefill.rs
crates/ie-engine/src/plane/: challenge.rs  connect.rs  connector.rs  disconnect.rs  ephemeral.rs  error.rs  gateway_platform_verify.rs  hyper_transport.rs  mod.rs  pull.rs  session.rs  verify.rs
crates/ie-engine/tests/: pull_infer_roundtrip.rs
crates/ie-protocol/: Cargo.toml
crates/ie-protocol/src/: lib.rs  ope_stream.rs  traffic.rs
crates/ie-runtime/: Cargo.toml
crates/ie-runtime/src/: env.rs  error.rs  lib.rs  tls.rs
crates/ie-upstream/: Cargo.toml
crates/ie-upstream/src/: client.rs  error.rs  lib.rs  multimodal.rs  sse.rs
docs/: CANARY.md  PORTING.md  TEST_MATRIX.md
scripts/: pack-runtime.sh
