[workspace]
members = [
    "crates/ie-protocol",
    "crates/ie-crypto",
    "crates/ie-attestation",
    "crates/ie-engine",
    "crates/ie-upstream",
    "crates/ie-runtime",
    "crates/ie-bin",
]
resolver = "2"

[workspace.package]
version = "0.9.3"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Lightec-AI/teechat-inference-engine-rust"
rust-version = "1.88"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures = "0.3"
clap = { version = "4", features = ["derive", "env"] }
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
bytes = "1"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "server-auto", "http2"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
uuid = { version = "1", features = ["v4"] }
url = "2"
rand = "0.8"
attested-mtls = "0.1.0"
ope-crypto = "0.1.0"
ope-envelope = "0.1.0"
ope-transport = "0.1.0"
ope-e2e = "0.1.0"
ie-protocol = { path = "crates/ie-protocol" }
ie-crypto = { path = "crates/ie-crypto" }
ie-attestation = { path = "crates/ie-attestation" }
ie-engine = { path = "crates/ie-engine" }
ie-upstream = { path = "crates/ie-upstream" }
ie-runtime = { path = "crates/ie-runtime" }
