[package]
name = "ie-engine"
description = "Supervised engine plane pool, epoch, and inference orchestration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
ie-attestation = { workspace = true }
ie-protocol = { workspace = true }
ie-runtime = { workspace = true }
rand = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
rcgen = "0.13"
tokio = { workspace = true, features = ["test-util"] }
