[package]
name = "ie-protocol"
description = "Re-export of OPE ope-protocol (gateway ↔ engine wire types)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ope-protocol = { git = "https://github.com/Lightec-AI/OPE.git", rev = "696ae8eab9f0007d23128c7608a53c37a5baee96" }
